--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -23,4 +23,18 @@ body {
       padding: 10px;
       display: inline-block;
   }
+
+  .app-form-row {
+    padding: 10px;
+
+    label {
+      width: 100px;
+      display: inline-block;
+    }
+  }
+
+  .ReactModal__Content {
+    width: 50%;
+    height: 200px;
+  }
 }
